--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <h2 style="color:black;padding-top: 20px; margin-top:35px;">Goals & Career Aspirations</h2>
 
         <div>
-            <img src="images/goals.png.png" alt="goals" style="float: left; margin:0px 15px 15px 0px ; width: 1000px; height:700px;">
+            <img src="images/goals.png" alt="goals" style="float: left; margin:0px 15px 15px 0px ; width: 1000px; height:700px;">
         </div>
         <div class="list">
 
